--- a/src/main/resources/templates/genus/index.html
+++ b/src/main/resources/templates/genus/index.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Ana Sayfa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-</head>
+
+<div th:replace="fragments/components :: head(~{::title})">
+    <title>VetApp | Cins Listesi</title>
+</div>
+
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">
-            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            VetApp
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
-                <a class="nav-link" th:href="@{/species}">Türler</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
     <h2>Kayıtlı Cinsler</h2>
@@ -38,9 +21,7 @@
         </div>
     </div>
 
-    <div th:if="${message}" class="alert alert-success mt-2" role="alert">
-        [[${message}]]
-    </div>
+    <div th:replace="fragments/components :: message"></div>
 
     <div th:if="${totalItems != 0}">
         <table class="table table-light table-bordered table-hover mt-3 table-responsive">
@@ -52,7 +33,7 @@
             </thead>
             <tbody>
             <tr th:each="genus : ${genera}">
-                <td class="text-capitalize">[[${genus.name}]]</span></td>
+                <td class="text-capitalize">[[${genus.name}]]</td>
                 <td>
                     <div class="row g-2">
                         <div class="col-lg-4 d-grid">
