--- a/src/main/resources/templates/genus/show.html
+++ b/src/main/resources/templates/genus/show.html
@@ -1,35 +1,16 @@
 <!DOCTYPE html>
 <html lang="tr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Ana Sayfa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-</head>
+
+<div th:replace="fragments/components :: head(~{::title})">
+    <title>VetApp | Cins Profil</title>
+</div>
+
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">
-            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            VetApp
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
-                <a class="nav-link" th:href="@{/species}">Türler</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
-    <div th:if="${message}" class="alert alert-success" role="alert">
-        [[${message}]]
-    </div>
+    <div th:replace="fragments/components :: message"></div>
 
     <div class="col-md-6 mx-auto">
         <div class="card text-dark bg-light mt-2">
@@ -61,7 +42,7 @@
             </thead>
             <tbody>
             <tr th:each="s : ${genus.species}">
-                <td>[[${s.name}]]</span></td>
+                <td>[[${s.name}]]</td>
                 <td>
                     <div class="row g-2">
                         <div class="col-lg-6 d-grid">
