--- a/src/main/resources/templates/owner/search.html
+++ b/src/main/resources/templates/owner/search.html
@@ -1,30 +1,13 @@
 <!DOCTYPE html>
 <html lang="tr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Ana Sayfa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-</head>
+
+<div th:replace="fragments/components :: head(~{::title})">
+    <title>VetApp | Hayvan Sahibi Arama</title>
+</div>
+
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">
-            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            VetApp
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
-                <a class="nav-link" th:href="@{/species}">Türler</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
     <h2>Arama Ekranı</h2>
@@ -55,63 +38,10 @@
     </div>
 
     <div th:unless="${totalItems == 0}">
-        <table class="table table-light table-bordered table-hover mt-3">
-            <thead>
-            <tr>
-                <th scope="col">Ad Soyad</th>
-                <th scope="col">Telefon</th>
-                <th scope="col">Email</th>
-                <th scope="col">Adres</th>
-                <th scope="col">Kayıt Tarihi</th>
-                <th scope="col">İşlem</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="owner : ${owners}">
-                <td class="text-capitalize">[[${owner.fullName}]]</span></td>
-                <td>[[${owner.telephoneNumber}]]</td>
-                <td>[[${owner.email}]]</td>
-                <td>[[${owner.address}]]</td>
-                <td>[[${#dates.format(owner.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
-                <td>
-                    <div class="row g-2">
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-success" th:href="@{/owners/{id}(id=${owner.id})}">Göster</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-warning"
-                               th:href="@{/owners/edit/{id}(id=${owner.id})}">Düzenle</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-danger" th:href="@{/owners/delete/{id}(id=${owner.id})}">Sil</a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-end">
-                <li class="page-item" th:classappend="${currentPage == 1 } ? 'disabled' : ''">
-                    <a class="page-link" th:href="@{/owners/search(keyword=${keyword},page=${currentPage - 1})}">Önceki
-                        Sayfa</a>
-                </li>
-                <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}"
-                    th:classappend="${currentPage == i} ? 'active' : ''" aria-current="page">
-                <span th:if="${currentPage == i}">
-                    <span class="page-link">[[${i}]]</span>
-                </span>
-                    <span th:unless="${currentPage == i}">
-                    <a class="page-link" th:href="@{/owners/search(keyword=${keyword},page=${i})}">[[${i}]]</a>
-                </span>
-                </li>
-                <li class="page-item"
-                    th:classappend="(${totalPages == 1 || totalPages == currentPage }) ? 'disabled' : ''">
-                    <a class="page-link" th:href="@{/owners/search(keyword=${keyword},page=${currentPage + 1})}">Sonraki
-                        Sayfa</a>
-                </li>
-            </ul>
-        </nav>
+
+        <div th:replace="fragments/owner-components :: owner-table"></div>
+
+        <div th:replace="fragments/owner-components :: search-page-navigation"></div>
     </div>
 </div>
 
