--- a/src/main/resources/templates/owner/show.html
+++ b/src/main/resources/templates/owner/show.html
@@ -1,62 +1,20 @@
 <!DOCTYPE html>
 <html lang="tr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Ana Sayfa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-</head>
+
+<div th:replace="fragments/components :: head(~{::title})">
+    <title>VetApp | Hayvan Sahibi Profil</title>
+</div>
+
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">
-            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            VetApp
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
-                <a class="nav-link" th:href="@{/species}">Türler</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
-    <div th:if="${message}" class="alert alert-success" role="alert">
-        [[${message}]]
-    </div>
+
+    <div th:replace="fragments/components :: message"></div>
 
     <div class="col-md-6 mx-auto">
-        <div class="card text-dark bg-light mt-2">
-            <div class="card-body">
-                <h5 class="card-title">[[${owner.fullName}]]</h5>
-                <hr>
-                <p class="card-text"><b>Telefon:</b> [[${owner.telephoneNumber}]]</p>
-                <p class="card-text"><b>Email:</b> [[${owner.email}]]</p>
-                <p class="card-text"><b>Adres:</b> [[${owner.address}]]</p>
-                <p class="card-text"><b>Kayıt Tarihi:</b> [[${#dates.format(owner.createdAt, 'dd/MMM/yyyy
-                    HH:mm')}]]</p>
-                <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(owner.updatedAt, 'dd/MMM/yyyy
-                    HH:mm')}]]</p>
-            </div>
-            <div class="card-footer text-muted">
-                <div class="row g-2">
-                    <div class="col-md-6 d-grid">
-                        <a class="btn  btn-danger" th:href="@{/owners/delete/{id}(id=${owner.id})}">
-                            <i class="bi bi-trash3"></i>&nbsp;&nbsp;Sil</a>
-                    </div>
-                    <div class="col-md-6 d-grid">
-                        <a class="btn btn-primary" th:href="@{/owners/edit/{id}(id=${owner.id})}">
-                            <i class="bi bi-pencil"></i>&nbsp;&nbsp;Düzenle</a>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <div th:replace="fragments/owner-components :: profile-card"></div>
     </div>
     <h4 class="mt-5">Kayıtlı Hayvanlar</h4>
     <hr>
@@ -70,47 +28,11 @@
             </a>
         </div>
     </div>
+
     <div th:if="(not ${owner.pets.isEmpty()})">
-        <table class="table table-light table-bordered table-hover mt-3">
-            <thead>
-            <tr>
-                <th>İsim</th>
-                <th>Cins</th>
-                <th>Tür</th>
-                <th>Doğum Tarihi</th>
-                <th>Kayıt Tarihi</th>
-                <th>Güncellenme Tarihi</th>
-                <th>İşlem</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="pet : ${owner.pets}">
-                <td>[[${pet.name}]]</span></td>
-                <td th:if="${pet.genus}">[[${pet.genus.name}]]</span></td>
-                <td th:unless="${pet.genus}"></span></td>
-                <td th:if="${pet.species}">[[${pet.species.name}]]</span></td>
-                <td th:unless="${pet.species}"></span></td>
-                <td>[[${#dates.format(pet.birthDate, 'dd/MMM/yyyy')}]]</td>
-                <td>[[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</td>
-                <td>[[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</td>
-                <td>
-                    <div class="row g-2">
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-success" th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-warning" th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-danger"
-                               th:href="@{'/pets/delete/' + ${pet.id} + '?ownerId=' + ${owner.id}}">Sil</a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+        <div th:replace="fragments/pet-components :: owner-pet-table"></div>
     </div>
+
 </div>
 
 </body>
