--- a/src/main/resources/templates/pet/addForm.html
+++ b/src/main/resources/templates/pet/addForm.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org"
-<!DOCTYPE html>
 <html lang="tr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Ana Sayfa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-</head>
+
+<div th:replace="fragments/components :: head(~{::title})">
+    <title>VetApp | Hayvan Sahibi Ekle</title>
+</div>
+
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">
-            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            VetApp
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
-                <a class="nav-link" th:href="@{/species}">Türler</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
     <div class="col-md-6 mx-auto">
@@ -35,11 +16,7 @@
         <div class="card bg-light">
             <div class="card-body">
                 <form th:action="@{/pets/add}" th:object="${pet}" method="post">
-                    <div th:if="${#fields.hasErrors()}" class="alert alert-danger" role="alert">
-                        <ul>
-                            <li th:each="err : ${#fields.allErrors()}" th:text="${err}"/>
-                        </ul>
-                    </div>
+                    <div th:replace="fragments/components :: form-error"></div>
                     <div class="mb-3">
                         <label for="name" class="form-label">İsim</label>
                         <input type="text" class="form-control" th:field="*{name}" id="name">
@@ -91,7 +68,7 @@
 <script>
     $(document).ready(function () {
             $("#genus").change(function () {
-                var genusId = this.value;
+                let genusId = this.value;
                 console.log(genusId)
                 if (genusId > 0) {
                     $.ajax({
@@ -101,11 +78,11 @@
                         dataType: 'json',
                         success: function (response) {
                             console.log(response);
-                            var len = response.length;
+                            let len = response.length;
                             $("#species").empty();
-                            for (var i = 0; i < len; i++) {
-                                var id = response[i]['id'];
-                                var name = response[i]['name'];
+                            for (let i = 0; i < len; i++) {
+                                let id = response[i]['id'];
+                                let name = response[i]['name'];
                                 $("#species").append("<option class='text-capitalize' value=" + id + ">" + name +
                                     "</option>");
                             }
