--- a/src/main/resources/templates/pet/index.html
+++ b/src/main/resources/templates/pet/index.html
@@ -1,32 +1,13 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org"
-<!DOCTYPE html>
 <html lang="tr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Ana Sayfa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-</head>
+
+<div th:replace="fragments/components :: head(~{::title})">
+    <title>VetApp | Hayvan Listesi</title>
+</div>
+
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">
-            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            VetApp
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
-                <a class="nav-link" th:href="@{/species}">Türler</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
     <h2>Hayvanlar</h2>
@@ -53,75 +34,14 @@
         <span class="badge bg-warning">Toplam Kayıt: [[${totalItems}]]</span>
     </div>
 
-    <div th:if="${message}" class="alert alert-success mt-2" role="alert">
-        [[${message}]]
-    </div>
-    <div th:if="(not ${pets.isEmpty()})">
-        <table class="table table-light table-bordered table-hover mt-3">
-            <thead>
-            <tr>
-                <th scope="col">İsim</th>
-                <th scope="col">Cins</th>
-                <th scope="col">Tür</th>
-                <th scope="col">Sahibi</th>
-                <th scope="col">Yaş Bilgisi</th>
-                <th scope="col">Doğum Tarihi</th>
-                <th scope="col">Kayıt/Güncel. Tarihi</th>
-                <th scope="col">İşlem</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="pet : ${pets}">
-                <td class="text-capitalize">[[${pet.name}]]</span></td>
-                <td th:if="${pet.genus}">[[${pet.genus.name}]]</td>
-                <td th:unless="${pet.genus}"></td>
-                <td th:if="${pet.species}">[[${pet.species.name}]]</td>
-                <td th:unless="${pet.species}"></td>
-                <td th:if="${pet.owner != null}">[[${pet.owner.fullName}]]</td>
-                <td th:unless="${pet.owner != null}"></td>
-                <td th:text="${@petServiceImpl.getAgeInfo(pet.id)}"></td>
-                <td>[[${#dates.format(pet.birthDate, 'dd/MMM/yyyy')}]]</td>
-                <td>[[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]<br>[[${#dates.format(pet.updatedAt,
-                    'dd/MMM/yyyy HH:mm')}]]
-                </td>
-                <td>
-                    <div class="row g-2">
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-success" th:href="@{/pets/{id}(id=${pet.id})}">Göster</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-warning" th:href="@{/pets/edit/{id}(id=${pet.id})}">Düzenle</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-outline-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">Sil</a>
-                        </div>
-                    </div>
-                </td>
-            </tr>
-            </tbody>
-        </table>
+    <div th:replace="fragments/components :: message"></div>
 
-        <nav aria-label="Page navigation example">
-            <ul class="pagination justify-content-end">
-                <li class="page-item" th:classappend="${currentPage == 1 } ? 'disabled' : ''">
-                    <a class="page-link" th:href="@{/pets(page=${currentPage - 1})}">Önceki Sayfa</a>
-                </li>
-                <li class="page-item" th:each="i: ${#numbers.sequence(1, totalPages)}"
-                    th:classappend="${currentPage == i} ? 'active' : ''" aria-current="page">
-                <span th:if="${currentPage == i}">
-                    <span class="page-link">[[${i}]]</span>
-                </span>
-                    <span th:unless="${currentPage == i}">
-                    <a class="page-link" th:href="@{/pets(page=${i})}">[[${i}]]</a>
-                </span>
-                </li>
-                <li class="page-item"
-                    th:classappend="(${totalPages == 1 || totalPages == currentPage }) ? 'disabled' : ''">
-                    <a class="page-link" th:href="@{/pets(page=${currentPage + 1})}">Sonraki Sayfa</a>
-                </li>
-            </ul>
-        </nav>
+    <div th:if="(not ${pets.isEmpty()})">
+        <div th:replace="fragments/pet-components :: pet-table"></div>
     </div>
+
+    <div th:replace="fragments/pet-components :: page-navigation"></div>
+
 </div>
 
 </body>
