--- a/src/main/resources/templates/pet/show.html
+++ b/src/main/resources/templates/pet/show.html
@@ -1,98 +1,21 @@
 <!DOCTYPE html>
-<html lang="tr" xmlns:th="http://www.thymeleaf.org"
-<!DOCTYPE html>
 <html lang="tr" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <title>Ana Sayfa</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css" rel="stylesheet">
-</head>
+
+<div th:replace="fragments/components :: head(~{::title})">
+    <title>VetApp | Hayvan Profil</title>
+</div>
+
 <body>
 
-<nav th:fragment="navbar" class="navbar navbar-expand-lg navbar-light bg-light">
-    <div class="container">
-        <a class="navbar-brand" th:href="@{/}">
-            <img src="/img/logo.png" alt="" width="30" height="30" class="d-inline-block align-text-top">
-            VetApp
-        </a>
-        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" th:href="@{/}">Ana Sayfa</a>
-                <a class="nav-link" th:href="@{/owners}">Hayvan Sahipleri</a>
-                <a class="nav-link" th:href="@{/pets}">Hayvanlar</a>
-                <a class="nav-link" th:href="@{/genera}">Cinsler</a>
-                <a class="nav-link" th:href="@{/species}">Türler</a>
-            </div>
-        </div>
-    </div>
-</nav>
+<div th:replace="fragments/components :: navbar"></div>
 
 <div class="container mt-5">
     <div class="row">
         <div class="col-md-6">
-            <div class="card text-dark bg-light" style="min-height: 450px;">
-                <div class="card-body">
-                    <h5 class="card-title text-capitalize">[[${pet.name}]]</h5>
-                    <hr>
-                    <p class="card-text text-capitalize"><b>Cins:</b>
-                        <span th:if="${pet.genus != null}">[[${pet.genus.name}]]</span>
-                    </p>
-                    <p class="card-text text-capitalize"><b>Tür:</b>
-                        <span th:if="${pet.species != null}">[[${pet.species.name}]]</span>
-                    </p>
-                    <p class="card-text"><b>Yaş Bilgisi: </b> [[${ageInfo}]]</p>
-                    <p class="card-text"><b>Doğum Tarihi:</b> [[${#dates.format(pet.birthDate, 'dd/MMM/yyyy')}]]</p>
-                    <p class="card-text"><b>Güncellenme Tarihi:</b>
-                        [[${#dates.format(pet.createdAt, 'dd/MMM/yyyy HH:mm')}]]</p>
-                    <p class="card-text"><b>Güncellenme Tarihi:</b>
-                        [[${#dates.format(pet.updatedAt, 'dd/MMM/yyyy HH:mm')}]]</p>
-                    <p class="card-text"><b>Açıklama:</b> [[${pet.description}]]</p>
-                </div>
-                <div class="card-footer text-muted">
-                    <div class="row g-2">
-                        <div class="col-md-6 d-grid">
-                            <a class="btn btn-danger" th:href="@{/pets/delete/{id}(id=${pet.id})}">
-                                <i class="bi bi-trash3"></i>&nbsp;&nbsp;Sil</a>
-                        </div>
-                        <div class="col-md-6 d-grid">
-                            <a class="btn btn-warning" th:href="@{/pets/edit/{id}(id=${pet.id})}">
-                                <i class="bi bi-pencil"></i>&nbsp;&nbsp;Düzenle</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div th:replace="fragments/pet-components :: profile-card"></div>
         </div>
         <div class="col-md-6" th:if="${pet.owner}">
-            <div class="card text-dark bg-light" style="min-height: 450px;">
-                <div class="card-body">
-                    <h5 class="card-title">[[${pet.owner.fullName}]]</h5>
-                    <hr>
-                    <p class="card-text"><b>Telefon:</b> [[${pet.owner.telephoneNumber}]]</p>
-                    <p class="card-text"><b>Email:</b> [[${pet.owner.email}]]</p>
-                    <p class="card-text"><b>Adres:</b> [[${pet.owner.address}]]</p>
-                    <p class="card-text"><b>Kayıt Tarihi:</b> [[${#dates.format(pet.owner.createdAt, 'dd/MMM/yyyy
-                        HH:mm')}]]</p>
-                    <p class="card-text"><b>Güncellenme Tarihi:</b> [[${#dates.format(pet.owner.updatedAt, 'dd/MMM/yyyy
-                        HH:mm')}]]</p>
-                </div>
-                <div class="card-footer text-muted">
-                    <div class="row g-2">
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn  btn-danger" th:href="@{/owners/delete/{id}(id=${pet.owner.id})}">
-                                <i class="bi bi-trash3"></i>&nbsp;&nbsp;Sil</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-warning" th:href="@{/owners/edit/{id}(id=${pet.owner.id})}">
-                                <i class="bi bi-pencil"></i>&nbsp;&nbsp;Düzenle</a>
-                        </div>
-                        <div class="col-lg-4 d-grid">
-                            <a class="btn btn-primary" th:href="@{/owners/{id}(id=${pet.owner.id})}">
-                                <i class="bi bi-person-square"></i>&nbsp;&nbsp;Göster</a>
-                        </div>
-                    </div>
-                </div>
-            </div>
+            <div th:replace="fragments/pet-components :: owner-profile-card"></div>
         </div>
     </div>
 </div>
